Moon dimension